# doc-simfinder

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
docs/: TUI_IMPLEMENTATION.md
docs/copilot/: core.md  files.md  state-machine.md  tui-integration.md  ui.md
docs/copilot/worklog/: 2025-12.md
src/: analysis.rs  cli.rs  config.rs  errors.rs  file_walker.rs  lib.rs  main.rs  presentation.rs
src/analysis/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/errors/: mod.rs
src/file_walker/: mod.rs
src/interactive/: mod.rs
src/presentation/: mod.rs
src/state_machine/: handlers.rs  mod.rs  states.rs  transitions.rs
src/state_machine/tests/: handler_tests.rs  mod.rs  state_tests.rs  transition_tests.rs
src/tui/: app.rs  focus.rs  layout.rs  mod.rs  widgets.rs
src/tui/tests/: app_tests.rs  focus_tests.rs  layout_tests.rs  mod.rs  widgets_tests.rs
testdata/: en_word_1000.txt  file00.txt
testdata/another_dir/: file01.md  large copy 10.txt  large copy.txt  large.txt
testdata/dir/: lorem-ipsum.txt
tests/: config_tests.rs  integration_test.rs  presentation_unit.rs
