[package]
name = "doc-simfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
colored = "2.0"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
globset = "0.4.18"
inquire = "0.9.1"
rayon = "1.11.0"
tempfile = "3.23.0"
term_size = "0.3.2"
textwrap = "0.16.2"
thiserror = "2.0.17"
jwalk = "0.8"

# TUI dependencies
ratatui = "0.29.0"
tokio = { version = "1.42", features = ["full"] }
opener = "0.7"
